@@ -168,6 +168,7 @@ def get_code(sub, info):
         code = sub.get("data", None)
         if code is None:
             code = info["csm_cslog"].retrieve_upload(sub["id"])[1]
+        if isinstance(code, bytes):
             code = code.decode("utf-8")
         return code.replace("\r\n", "\n")
     except:
